--- a/src/js/transitions/transitions.css.tmpl
+++ b/src/js/transitions/transitions.css.tmpl
@@ -9,7 +9,7 @@
 
 .<%= class_name %>.show {
   visibility: visible;
-  background: #000000;
+  background: #000000; /*change to make color effect*/
 }
 
 .<%= class_name %> svg {
@@ -20,7 +20,7 @@
 }
 
 .<%= class_name %> svg path {
-  fill: rgba(0, 0, 0, 0);
+  fill: #000; /*change to make color effect*/
 }
 
 .<%= class_name %>::after,
